--- a/readme
+++ b/readme
@@ -1,2 +1,3 @@
 MGT412: Computational Finance 
-Resources repository
+(c) Prof. Marius Zoican, University of Toronto Mississauga
+Course version: Winter 2020
